<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tablelayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textLabel1"
            android:layout_column="0"
            android:text="@string/textLabel1"
            />
        <EditText
            android:id="@+id/textAmount"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:numeric="decimal"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textLabel2"
            android:text="@string/textLabel2"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <EditText
            android:id="@+id/textPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:numeric="integer"/>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/textLabel3"
            android:text="@string/textLabel3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </TableRow>

    <TableRow>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_span="2"
            android:checkedButton="@+id/radioFifteen">
            <RadioButton
                android:id="@+id/radioFifteen"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioText1"
                android:textSize="15sp"
                />
            <RadioButton
                android:id="@+id/radioTwenty"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioText2"
                android:textSize="15sp"
                />
            <RadioButton
                android:id="@+id/radioOther"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioText3"
                android:textSize="15sp"
                />
        </RadioGroup>
        <EditText
            android:id="@+id/textTipOther"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/buttonReset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:text="@string/buttonReset"
            />
        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/buttonCalculate"
            />
    </TableRow>

    <View
        android:layout_height="2px"
        android:background="@color/background"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        />
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip">
        <TextView
            android:id="@+id/textLabel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLabel4"
            />
        <TextView
            android:id="@+id/tipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:text="@string/tipAmount"
            />
    </TableRow>
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip">
        <TextView
            android:id="@+id/textLabel5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLabel5"
            />
        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:text="@string/textTotal"
            />
    </TableRow>
    <TableRow
        android:paddingBottom="10dip"
        android:paddingTop="5dip">
        <TextView
            android:id="@+id/textLabel6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/textLabel6"
            />
        <TextView
            android:id="@+id/textPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:text="@string/textPerPerson"
            />
    </TableRow>

</TableLayout>
